# Vector-Visualization

./: README.md
BasicStreamSurfaceGeneration/: BasicStreamSurfaceGeneration.sln
BasicStreamSurfaceGeneration/BasicStreamSurfaceGeneration/: BasicStreamSurfaceGeneration.vcxproj  Steady3D.h  StreamSurfaceTracer.h  StreamlineTracer.h  Utilities.cpp
BasicStreamSurfaceGeneration/BasicStreamSurfaceGeneration/x64/Debug/: BasicStreamSurfaceGeneration.idb  streamlinetracer.new.obj.enc  utilities.obj.enc
BasicStreamSurfaceGeneration/TestStreamSurfaceGeneration/: Steady3D_Bernard.cpp  Steady3D_Bernard.h  TestStreamSurfaceGeneration.vcxproj  main.cpp
BasicStreamSurfaceGeneration/x64/Debug/: BasicStreamSurfaceGeneration.lib  TestStreamSurfaceGeneration.ilk
sample_data/: bernard3D_Q.vtk  connect.vtk  generate.vtk  gridpoints.vtk  multipleStreamline.vtk  seedpoints.vtk  singleStreamline.vtk  teststreamline.vtk
src/: CMakeLists.txt  Steady3D.cpp  Steady3D_Bernard.cpp  Steady3D_Bernard.h  StreamSurfaceTracer.cpp  StreamlineTracer.cpp  Task-10-13.txt  Task-10-6.txt  Task-11-12.txt  Task-11-17.txt  Task-11-24.txt  Task-11-3.txt  Task-12-8.txt  Utilities.h  XMLStructuredGridWriter.cxx
src/Configuration1/: streamlineLARGEANGLE.vtk
src/Configuration2/: seedpointsLARGE.vtk  seedpointsLargeGradient.vtk
src/backup/: XMLStructuredGridWriter.cxx
src/output/: gradients.vtk  gridpoints.vtk  largeGradient.vtk  seedpointlarge.vtk  seedpointsLARGE.vtk  seedpointsLargeGradient.vtk  seedpointsSMALL.vtk  seedpointsSmallGradient.vtk
src/sample_data/: bernard_seeding_curves.txt
(+15 files in other folders)
